panel search cargo next step, cancel and show detail.